[package]
name = "skyreaper"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d = { git = "https://github.com/Jondolf/avian.git", version = "0.1.2" }
# XXX disable dynamic_linking for release
bevy = { version = "0.15.0", features = ["dynamic_linking"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
